[package]
name = "nes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sdl2 = "0.36.0"
rand = "0.8.5"
itertools = "0.12.0"
bitflags = "2.4.2"
spin_sleep = "1.2.1"
num = "0.4.3"
memmap2 = "0.9.5"