[package]
name = "nes_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sdl2 = "0.38.0"
rand = "0.8.5"
itertools = "0.12.0"
bitflags = { version = "2.4.2", features = ["serde"] }
spin_sleep = "1.2.1"
num = "0.4.3"
memmap2 = "0.9.5"
hound = "3.5"
clap = { version = "4.5.57", features = ["derive"] }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_with = "3.18.0"
serde_json = "1.0"
derivative = "2.2.0"
enum_dispatch = "0.3.13"
postcard = { version = "1.1.3", features = ["use-std"] }
image = "0.25.10"

[features]
default = []
bundled-sdl2 = ["sdl2/bundled"]
