[package]
name = "nes_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.38.0"
itertools = "0.12.0"
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_with = "3.18.0"
serde_json = "1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
image = "0.25.10"
hound = "3.5"
nes_rs_core = {path = "../nes_rs_core" }

[features]
default = []
bundled-sdl2 = ["sdl2/bundled"]
