[package]
name = "nes_rs_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
itertools = "0.12.0"
bitflags = { version = "2.4.2", features = ["serde"] }
spin_sleep = "1.2.1"
num = "0.4.3"
memmap2 = "0.9.5"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_with = "3.18.0"
derivative = "2.2.0"
enum_dispatch = "0.3.13"
